# jupyter-notebook-mcp

./: LICENSE  README.md  main.py  pyproject.toml
notebooks/: client.js  example_notebook.ipynb  intro_python.ipynb  jupyter_mcp_client.py  jupyter_ws_server.py  stata_example.ipynb
src/: client.js  jupyter_mcp_external_client.py  jupyter_mcp_server.py  jupyter_ws_client.py  jupyter_ws_external_client.py  jupyter_ws_server.py  ws_client.py
src/jupyter_notebook_mcp/: __init__.py
