[project]
name = "jupyter-notebook-mcp"
version = "0.1.0"
description = "Connects Jupyter Notebook to LLM models through MCP protocol"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.5.0",
    "notebook>=7.3.3",
    "websockets>=15.0.1",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"jupyter_notebook_mcp" = ["client.js"]
